// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseSpinner /> should render BaseSpinner with default props 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1.c1.c1.c1 {
  padding: 1px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
  animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
}

<div>
  <div
    class=""
    data-blade-component="spinner"
  >
    <div
      aria-label="Loading"
      class="c0"
      data-blade-component="base-box"
      role="progressbar"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12ZM3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
            fill-opacity="0.2"
          />
          <path
            d="M24 12C24 13.8937 23.5518 15.7606 22.6921 17.4479C21.8324 19.1352 20.5855 20.5951 19.0534 21.7082C17.5214 22.8213 15.7476 23.556 13.8772 23.8523C12.0068 24.1485 10.0928 23.9979 8.29181 23.4127L9.21886 20.5595C10.5696 20.9984 12.0051 21.1114 13.4079 20.8892C14.8107 20.667 16.141 20.116 17.2901 19.2812C18.4391 18.4463 19.3743 17.3514 20.0191 16.0859C20.6639 14.8204 21 13.4203 21 12H24Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
          />
          <path
            d="M-1.33514e-05 12C-1.33514e-05 10.1063 0.448176 8.23944 1.30791 6.55211C2.16764 4.86479 3.41451 3.4049 4.94656 2.2918C6.47862 1.17869 8.25236 0.443983 10.1228 0.147739C11.9932 -0.148504 13.9072 0.00212896 15.7082 0.587322L14.7811 3.44049C13.4304 3.0016 11.9949 2.88862 10.5921 3.11081C9.18927 3.33299 7.85896 3.88402 6.70992 4.71885C5.56088 5.55367 4.62573 6.64859 3.98093 7.91409C3.33613 9.17958 2.99999 10.5797 2.99999 12H-1.33514e-05Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BaseSpinner /> should render high contrast BaseSpinner with bottom label 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2.c2.c2.c2.c2 {
  margin-top: 8px;
  margin-left: 0px;
}

.c1.c1.c1.c1.c1 {
  padding: 1px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
  animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="spinner"
  >
    <div
      aria-label="Loading"
      class="c0"
      data-blade-component="base-box"
      role="progressbar"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12ZM3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
            fill-opacity="0.2"
          />
          <path
            d="M24 12C24 13.8937 23.5518 15.7606 22.6921 17.4479C21.8324 19.1352 20.5855 20.5951 19.0534 21.7082C17.5214 22.8213 15.7476 23.556 13.8772 23.8523C12.0068 24.1485 10.0928 23.9979 8.29181 23.4127L9.21886 20.5595C10.5696 20.9984 12.0051 21.1114 13.4079 20.8892C14.8107 20.667 16.141 20.116 17.2901 19.2812C18.4391 18.4463 19.3743 17.3514 20.0191 16.0859C20.6639 14.8204 21 13.4203 21 12H24Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
          />
          <path
            d="M-1.33514e-05 12C-1.33514e-05 10.1063 0.448176 8.23944 1.30791 6.55211C2.16764 4.86479 3.41451 3.4049 4.94656 2.2918C6.47862 1.17869 8.25236 0.443983 10.1228 0.147739C11.9932 -0.148504 13.9072 0.00212896 15.7082 0.587322L14.7811 3.44049C13.4304 3.0016 11.9949 2.88862 10.5921 3.11081C9.18927 3.33299 7.85896 3.88402 6.70992 4.71885C5.56088 5.55367 4.62573 6.64859 3.98093 7.91409C3.33613 9.17958 2.99999 10.5797 2.99999 12H-1.33514e-05Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
          />
        </svg>
      </div>
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <p
          class="c3"
          data-blade-component="text"
        >
          Loading
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BaseSpinner /> should render information color BaseSpinner 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1.c1.c1.c1 {
  padding: 1px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
  animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
}

<div>
  <div
    class=""
    data-blade-component="spinner"
  >
    <div
      aria-label="Loading"
      class="c0"
      data-blade-component="base-box"
      role="progressbar"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12ZM3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12Z"
            data-blade-component="svg-path"
            fill="hsla(200, 84%, 44%, 1)"
            fill-opacity="0.2"
          />
          <path
            d="M24 12C24 13.8937 23.5518 15.7606 22.6921 17.4479C21.8324 19.1352 20.5855 20.5951 19.0534 21.7082C17.5214 22.8213 15.7476 23.556 13.8772 23.8523C12.0068 24.1485 10.0928 23.9979 8.29181 23.4127L9.21886 20.5595C10.5696 20.9984 12.0051 21.1114 13.4079 20.8892C14.8107 20.667 16.141 20.116 17.2901 19.2812C18.4391 18.4463 19.3743 17.3514 20.0191 16.0859C20.6639 14.8204 21 13.4203 21 12H24Z"
            data-blade-component="svg-path"
            fill="hsla(200, 84%, 44%, 1)"
          />
          <path
            d="M-1.33514e-05 12C-1.33514e-05 10.1063 0.448176 8.23944 1.30791 6.55211C2.16764 4.86479 3.41451 3.4049 4.94656 2.2918C6.47862 1.17869 8.25236 0.443983 10.1228 0.147739C11.9932 -0.148504 13.9072 0.00212896 15.7082 0.587322L14.7811 3.44049C13.4304 3.0016 11.9949 2.88862 10.5921 3.11081C9.18927 3.33299 7.85896 3.88402 6.70992 4.71885C5.56088 5.55367 4.62573 6.64859 3.98093 7.91409C3.33613 9.17958 2.99999 10.5797 2.99999 12H-1.33514e-05Z"
            data-blade-component="svg-path"
            fill="hsla(200, 84%, 44%, 1)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BaseSpinner /> should render large size BaseSpinner 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1.c1.c1.c1 {
  padding: 1px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
  animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
}

<div>
  <div
    class=""
    data-blade-component="spinner"
  >
    <div
      aria-label="Loading"
      class="c0"
      data-blade-component="base-box"
      role="progressbar"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="20px"
          viewBox="0 0 24 24"
          width="20px"
        >
          <path
            d="M24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12ZM3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
            fill-opacity="0.2"
          />
          <path
            d="M24 12C24 13.8937 23.5518 15.7606 22.6921 17.4479C21.8324 19.1352 20.5855 20.5951 19.0534 21.7082C17.5214 22.8213 15.7476 23.556 13.8772 23.8523C12.0068 24.1485 10.0928 23.9979 8.29181 23.4127L9.21886 20.5595C10.5696 20.9984 12.0051 21.1114 13.4079 20.8892C14.8107 20.667 16.141 20.116 17.2901 19.2812C18.4391 18.4463 19.3743 17.3514 20.0191 16.0859C20.6639 14.8204 21 13.4203 21 12H24Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
          />
          <path
            d="M-1.33514e-05 12C-1.33514e-05 10.1063 0.448176 8.23944 1.30791 6.55211C2.16764 4.86479 3.41451 3.4049 4.94656 2.2918C6.47862 1.17869 8.25236 0.443983 10.1228 0.147739C11.9932 -0.148504 13.9072 0.00212896 15.7082 0.587322L14.7811 3.44049C13.4304 3.0016 11.9949 2.88862 10.5921 3.11081C9.18927 3.33299 7.85896 3.88402 6.70992 4.71885C5.56088 5.55367 4.62573 6.64859 3.98093 7.91409C3.33613 9.17958 2.99999 10.5797 2.99999 12H-1.33514e-05Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BaseSpinner /> should render low contrast BaseSpinner with right label 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2.c2.c2.c2.c2 {
  margin-top: 0px;
  margin-left: 8px;
}

.c1.c1.c1.c1.c1 {
  padding: 1px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
  animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="spinner"
  >
    <div
      aria-label="Loading"
      class="c0"
      data-blade-component="base-box"
      role="progressbar"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12ZM3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
            fill-opacity="0.2"
          />
          <path
            d="M24 12C24 13.8937 23.5518 15.7606 22.6921 17.4479C21.8324 19.1352 20.5855 20.5951 19.0534 21.7082C17.5214 22.8213 15.7476 23.556 13.8772 23.8523C12.0068 24.1485 10.0928 23.9979 8.29181 23.4127L9.21886 20.5595C10.5696 20.9984 12.0051 21.1114 13.4079 20.8892C14.8107 20.667 16.141 20.116 17.2901 19.2812C18.4391 18.4463 19.3743 17.3514 20.0191 16.0859C20.6639 14.8204 21 13.4203 21 12H24Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
          />
          <path
            d="M-1.33514e-05 12C-1.33514e-05 10.1063 0.448176 8.23944 1.30791 6.55211C2.16764 4.86479 3.41451 3.4049 4.94656 2.2918C6.47862 1.17869 8.25236 0.443983 10.1228 0.147739C11.9932 -0.148504 13.9072 0.00212896 15.7082 0.587322L14.7811 3.44049C13.4304 3.0016 11.9949 2.88862 10.5921 3.11081C9.18927 3.33299 7.85896 3.88402 6.70992 4.71885C5.56088 5.55367 4.62573 6.64859 3.98093 7.91409C3.33613 9.17958 2.99999 10.5797 2.99999 12H-1.33514e-05Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
          />
        </svg>
      </div>
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <p
          class="c3"
          data-blade-component="text"
        >
          Loading
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BaseSpinner /> should render medium size BaseSpinner 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1.c1.c1.c1 {
  padding: 1px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
  animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
}

<div>
  <div
    class=""
    data-blade-component="spinner"
  >
    <div
      aria-label="Loading"
      class="c0"
      data-blade-component="base-box"
      role="progressbar"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12ZM3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
            fill-opacity="0.2"
          />
          <path
            d="M24 12C24 13.8937 23.5518 15.7606 22.6921 17.4479C21.8324 19.1352 20.5855 20.5951 19.0534 21.7082C17.5214 22.8213 15.7476 23.556 13.8772 23.8523C12.0068 24.1485 10.0928 23.9979 8.29181 23.4127L9.21886 20.5595C10.5696 20.9984 12.0051 21.1114 13.4079 20.8892C14.8107 20.667 16.141 20.116 17.2901 19.2812C18.4391 18.4463 19.3743 17.3514 20.0191 16.0859C20.6639 14.8204 21 13.4203 21 12H24Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
          />
          <path
            d="M-1.33514e-05 12C-1.33514e-05 10.1063 0.448176 8.23944 1.30791 6.55211C2.16764 4.86479 3.41451 3.4049 4.94656 2.2918C6.47862 1.17869 8.25236 0.443983 10.1228 0.147739C11.9932 -0.148504 13.9072 0.00212896 15.7082 0.587322L14.7811 3.44049C13.4304 3.0016 11.9949 2.88862 10.5921 3.11081C9.18927 3.33299 7.85896 3.88402 6.70992 4.71885C5.56088 5.55367 4.62573 6.64859 3.98093 7.91409C3.33613 9.17958 2.99999 10.5797 2.99999 12H-1.33514e-05Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BaseSpinner /> should render negative color BaseSpinner 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1.c1.c1.c1 {
  padding: 1px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
  animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
}

<div>
  <div
    class=""
    data-blade-component="spinner"
  >
    <div
      aria-label="Loading"
      class="c0"
      data-blade-component="base-box"
      role="progressbar"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12ZM3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12Z"
            data-blade-component="svg-path"
            fill="hsla(4, 86%, 58%, 1)"
            fill-opacity="0.2"
          />
          <path
            d="M24 12C24 13.8937 23.5518 15.7606 22.6921 17.4479C21.8324 19.1352 20.5855 20.5951 19.0534 21.7082C17.5214 22.8213 15.7476 23.556 13.8772 23.8523C12.0068 24.1485 10.0928 23.9979 8.29181 23.4127L9.21886 20.5595C10.5696 20.9984 12.0051 21.1114 13.4079 20.8892C14.8107 20.667 16.141 20.116 17.2901 19.2812C18.4391 18.4463 19.3743 17.3514 20.0191 16.0859C20.6639 14.8204 21 13.4203 21 12H24Z"
            data-blade-component="svg-path"
            fill="hsla(4, 86%, 58%, 1)"
          />
          <path
            d="M-1.33514e-05 12C-1.33514e-05 10.1063 0.448176 8.23944 1.30791 6.55211C2.16764 4.86479 3.41451 3.4049 4.94656 2.2918C6.47862 1.17869 8.25236 0.443983 10.1228 0.147739C11.9932 -0.148504 13.9072 0.00212896 15.7082 0.587322L14.7811 3.44049C13.4304 3.0016 11.9949 2.88862 10.5921 3.11081C9.18927 3.33299 7.85896 3.88402 6.70992 4.71885C5.56088 5.55367 4.62573 6.64859 3.98093 7.91409C3.33613 9.17958 2.99999 10.5797 2.99999 12H-1.33514e-05Z"
            data-blade-component="svg-path"
            fill="hsla(4, 86%, 58%, 1)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BaseSpinner /> should render neutral color BaseSpinner 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1.c1.c1.c1 {
  padding: 1px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
  animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
}

<div>
  <div
    class=""
    data-blade-component="spinner"
  >
    <div
      aria-label="Loading"
      class="c0"
      data-blade-component="base-box"
      role="progressbar"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12ZM3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
            fill-opacity="0.2"
          />
          <path
            d="M24 12C24 13.8937 23.5518 15.7606 22.6921 17.4479C21.8324 19.1352 20.5855 20.5951 19.0534 21.7082C17.5214 22.8213 15.7476 23.556 13.8772 23.8523C12.0068 24.1485 10.0928 23.9979 8.29181 23.4127L9.21886 20.5595C10.5696 20.9984 12.0051 21.1114 13.4079 20.8892C14.8107 20.667 16.141 20.116 17.2901 19.2812C18.4391 18.4463 19.3743 17.3514 20.0191 16.0859C20.6639 14.8204 21 13.4203 21 12H24Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
          />
          <path
            d="M-1.33514e-05 12C-1.33514e-05 10.1063 0.448176 8.23944 1.30791 6.55211C2.16764 4.86479 3.41451 3.4049 4.94656 2.2918C6.47862 1.17869 8.25236 0.443983 10.1228 0.147739C11.9932 -0.148504 13.9072 0.00212896 15.7082 0.587322L14.7811 3.44049C13.4304 3.0016 11.9949 2.88862 10.5921 3.11081C9.18927 3.33299 7.85896 3.88402 6.70992 4.71885C5.56088 5.55367 4.62573 6.64859 3.98093 7.91409C3.33613 9.17958 2.99999 10.5797 2.99999 12H-1.33514e-05Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BaseSpinner /> should render notice color BaseSpinner 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1.c1.c1.c1 {
  padding: 1px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
  animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
}

<div>
  <div
    class=""
    data-blade-component="spinner"
  >
    <div
      aria-label="Loading"
      class="c0"
      data-blade-component="base-box"
      role="progressbar"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12ZM3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12Z"
            data-blade-component="svg-path"
            fill="hsla(25, 90%, 48%, 1)"
            fill-opacity="0.2"
          />
          <path
            d="M24 12C24 13.8937 23.5518 15.7606 22.6921 17.4479C21.8324 19.1352 20.5855 20.5951 19.0534 21.7082C17.5214 22.8213 15.7476 23.556 13.8772 23.8523C12.0068 24.1485 10.0928 23.9979 8.29181 23.4127L9.21886 20.5595C10.5696 20.9984 12.0051 21.1114 13.4079 20.8892C14.8107 20.667 16.141 20.116 17.2901 19.2812C18.4391 18.4463 19.3743 17.3514 20.0191 16.0859C20.6639 14.8204 21 13.4203 21 12H24Z"
            data-blade-component="svg-path"
            fill="hsla(25, 90%, 48%, 1)"
          />
          <path
            d="M-1.33514e-05 12C-1.33514e-05 10.1063 0.448176 8.23944 1.30791 6.55211C2.16764 4.86479 3.41451 3.4049 4.94656 2.2918C6.47862 1.17869 8.25236 0.443983 10.1228 0.147739C11.9932 -0.148504 13.9072 0.00212896 15.7082 0.587322L14.7811 3.44049C13.4304 3.0016 11.9949 2.88862 10.5921 3.11081C9.18927 3.33299 7.85896 3.88402 6.70992 4.71885C5.56088 5.55367 4.62573 6.64859 3.98093 7.91409C3.33613 9.17958 2.99999 10.5797 2.99999 12H-1.33514e-05Z"
            data-blade-component="svg-path"
            fill="hsla(25, 90%, 48%, 1)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BaseSpinner /> should render positive color BaseSpinner 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1.c1.c1.c1 {
  padding: 1px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
  animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
}

<div>
  <div
    class=""
    data-blade-component="spinner"
  >
    <div
      aria-label="Loading"
      class="c0"
      data-blade-component="base-box"
      role="progressbar"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12ZM3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12Z"
            data-blade-component="svg-path"
            fill="hsla(150, 100%, 32%, 1)"
            fill-opacity="0.2"
          />
          <path
            d="M24 12C24 13.8937 23.5518 15.7606 22.6921 17.4479C21.8324 19.1352 20.5855 20.5951 19.0534 21.7082C17.5214 22.8213 15.7476 23.556 13.8772 23.8523C12.0068 24.1485 10.0928 23.9979 8.29181 23.4127L9.21886 20.5595C10.5696 20.9984 12.0051 21.1114 13.4079 20.8892C14.8107 20.667 16.141 20.116 17.2901 19.2812C18.4391 18.4463 19.3743 17.3514 20.0191 16.0859C20.6639 14.8204 21 13.4203 21 12H24Z"
            data-blade-component="svg-path"
            fill="hsla(150, 100%, 32%, 1)"
          />
          <path
            d="M-1.33514e-05 12C-1.33514e-05 10.1063 0.448176 8.23944 1.30791 6.55211C2.16764 4.86479 3.41451 3.4049 4.94656 2.2918C6.47862 1.17869 8.25236 0.443983 10.1228 0.147739C11.9932 -0.148504 13.9072 0.00212896 15.7082 0.587322L14.7811 3.44049C13.4304 3.0016 11.9949 2.88862 10.5921 3.11081C9.18927 3.33299 7.85896 3.88402 6.70992 4.71885C5.56088 5.55367 4.62573 6.64859 3.98093 7.91409C3.33613 9.17958 2.99999 10.5797 2.99999 12H-1.33514e-05Z"
            data-blade-component="svg-path"
            fill="hsla(150, 100%, 32%, 1)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BaseSpinner /> should render primary color BaseSpinner 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1.c1.c1.c1 {
  padding: 1px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
  animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
}

<div>
  <div
    class=""
    data-blade-component="spinner"
  >
    <div
      aria-label="Loading"
      class="c0"
      data-blade-component="base-box"
      role="progressbar"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12ZM3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12Z"
            data-blade-component="svg-path"
            fill="hsla(227, 100%, 59%, 1)"
            fill-opacity="0.2"
          />
          <path
            d="M24 12C24 13.8937 23.5518 15.7606 22.6921 17.4479C21.8324 19.1352 20.5855 20.5951 19.0534 21.7082C17.5214 22.8213 15.7476 23.556 13.8772 23.8523C12.0068 24.1485 10.0928 23.9979 8.29181 23.4127L9.21886 20.5595C10.5696 20.9984 12.0051 21.1114 13.4079 20.8892C14.8107 20.667 16.141 20.116 17.2901 19.2812C18.4391 18.4463 19.3743 17.3514 20.0191 16.0859C20.6639 14.8204 21 13.4203 21 12H24Z"
            data-blade-component="svg-path"
            fill="hsla(227, 100%, 59%, 1)"
          />
          <path
            d="M-1.33514e-05 12C-1.33514e-05 10.1063 0.448176 8.23944 1.30791 6.55211C2.16764 4.86479 3.41451 3.4049 4.94656 2.2918C6.47862 1.17869 8.25236 0.443983 10.1228 0.147739C11.9932 -0.148504 13.9072 0.00212896 15.7082 0.587322L14.7811 3.44049C13.4304 3.0016 11.9949 2.88862 10.5921 3.11081C9.18927 3.33299 7.85896 3.88402 6.70992 4.71885C5.56088 5.55367 4.62573 6.64859 3.98093 7.91409C3.33613 9.17958 2.99999 10.5797 2.99999 12H-1.33514e-05Z"
            data-blade-component="svg-path"
            fill="hsla(227, 100%, 59%, 1)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BaseSpinner /> should render white color BaseSpinner 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1.c1.c1.c1 {
  padding: 1px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
  animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
}

<div>
  <div
    class=""
    data-blade-component="spinner"
  >
    <div
      aria-label="Loading"
      class="c0"
      data-blade-component="base-box"
      role="progressbar"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12ZM3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12Z"
            data-blade-component="svg-path"
            fill="hsla(0, 0%, 100%, 0.8)"
            fill-opacity="0.2"
          />
          <path
            d="M24 12C24 13.8937 23.5518 15.7606 22.6921 17.4479C21.8324 19.1352 20.5855 20.5951 19.0534 21.7082C17.5214 22.8213 15.7476 23.556 13.8772 23.8523C12.0068 24.1485 10.0928 23.9979 8.29181 23.4127L9.21886 20.5595C10.5696 20.9984 12.0051 21.1114 13.4079 20.8892C14.8107 20.667 16.141 20.116 17.2901 19.2812C18.4391 18.4463 19.3743 17.3514 20.0191 16.0859C20.6639 14.8204 21 13.4203 21 12H24Z"
            data-blade-component="svg-path"
            fill="hsla(0, 0%, 100%, 0.8)"
          />
          <path
            d="M-1.33514e-05 12C-1.33514e-05 10.1063 0.448176 8.23944 1.30791 6.55211C2.16764 4.86479 3.41451 3.4049 4.94656 2.2918C6.47862 1.17869 8.25236 0.443983 10.1228 0.147739C11.9932 -0.148504 13.9072 0.00212896 15.7082 0.587322L14.7811 3.44049C13.4304 3.0016 11.9949 2.88862 10.5921 3.11081C9.18927 3.33299 7.85896 3.88402 6.70992 4.71885C5.56088 5.55367 4.62573 6.64859 3.98093 7.91409C3.33613 9.17958 2.99999 10.5797 2.99999 12H-1.33514e-05Z"
            data-blade-component="svg-path"
            fill="hsla(0, 0%, 100%, 0.8)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BaseSpinner /> should render xlarge size BaseSpinner 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1.c1.c1.c1 {
  padding: 1px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
  animation: eoUyJr-450290765 960ms cubic-bezier(0.5,0,0.3,1.5) infinite;
}

<div>
  <div
    class=""
    data-blade-component="spinner"
  >
    <div
      aria-label="Loading"
      class="c0"
      data-blade-component="base-box"
      role="progressbar"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12ZM3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
            fill-opacity="0.2"
          />
          <path
            d="M24 12C24 13.8937 23.5518 15.7606 22.6921 17.4479C21.8324 19.1352 20.5855 20.5951 19.0534 21.7082C17.5214 22.8213 15.7476 23.556 13.8772 23.8523C12.0068 24.1485 10.0928 23.9979 8.29181 23.4127L9.21886 20.5595C10.5696 20.9984 12.0051 21.1114 13.4079 20.8892C14.8107 20.667 16.141 20.116 17.2901 19.2812C18.4391 18.4463 19.3743 17.3514 20.0191 16.0859C20.6639 14.8204 21 13.4203 21 12H24Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
          />
          <path
            d="M-1.33514e-05 12C-1.33514e-05 10.1063 0.448176 8.23944 1.30791 6.55211C2.16764 4.86479 3.41451 3.4049 4.94656 2.2918C6.47862 1.17869 8.25236 0.443983 10.1228 0.147739C11.9932 -0.148504 13.9072 0.00212896 15.7082 0.587322L14.7811 3.44049C13.4304 3.0016 11.9949 2.88862 10.5921 3.11081C9.18927 3.33299 7.85896 3.88402 6.70992 4.71885C5.56088 5.55367 4.62573 6.64859 3.98093 7.91409C3.33613 9.17958 2.99999 10.5797 2.99999 12H-1.33514e-05Z"
            data-blade-component="svg-path"
            fill="hsla(211, 26%, 34%, 1)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
